Fix logo style on mobile

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -422,8 +422,9 @@ b {
 
 @media screen and (max-width: 600px) {
   .partnerlogo {
-    height: auto;
-    width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
